Изделие проводится по всему циклу

--- a/www/style.css
+++ b/www/style.css
@@ -165,6 +165,22 @@ p {
 
 .employee-editor tr:hover {background-color: #ddd;}
 
+.unit-editor {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    //width: 100%;
+}
+
+.unit-editor td, .unit-editor th {
+    border: 1px solid #ddd;
+    text-align: left;
+    padding: 8px;
+}
+
+.unit-editor tr:nth-child(even){background-color: #f2f2f2}
+
+.unit-editor tr:hover {background-color: #ddd;}
+
 
 .units {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
