--- a/www/style.css
+++ b/www/style.css
@@ -11,6 +11,46 @@ div {
 }
 /* END DEBUG */
 
+
+#header {
+    text-align:center;
+    padding:5px;
+	border-radius: 25px;
+	margin: 10px;
+	border: 2px solid #AAAAFF;
+    padding: 20px; 
+	
+}
+#nav {
+	margin: 10px;
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:20%;
+    float:left;
+    padding:5px; 
+	border-radius: 25px;
+    border: 2px solid #AAAAFF;
+    padding: 20px; 
+}
+#section {
+	margin: 10px;
+    width: 69%;
+    float:left;
+	border-radius: 25px;
+    border: 2px solid #AAAAFF;
+    padding: 20px; 
+}
+#footer {
+	margin: 10px;
+    clear:both;
+    text-align:center;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 20px; 
+	width: 80%;
+}
+
 input[type="text"], input[type="password"], select {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	padding: 3px;
@@ -18,62 +58,15 @@ input[type="text"], input[type="password"], select {
 	transition: box-shadow 0.3s, border 0.3s;
 	width: 100%;
 }
+
+.auth {
+	width: 50%;
+}
  
  input[type="text"]:focus,
  input[type="text"].focus {
 	border: solid 1px #707070;
 	box-shadow: 0 0 5px 1px #969696;
-}
-
-#container {
-	float: center;
-	margin-top: 50px;
-	width: 80%;
-}
-
-#left {
-
-	position: absolute;
-	float: left;
-	float: left;
-	left: 100px;
-	width: 20%;
-}
-
-#right
-{
-	float: right;
-	width: 55%;
-}
-
-#nav {
-	left: 0px;
-	width: 95%;
-	
-	border-radius: 15px;
-	border: 3px solid #AAAAFF;
-}
-
-#header {
-  /* position is static by default */
-}
-
-
-#content-box {
-	margin-top: 50 px;
-  /* position is static by default */
-  
-  	border: 3px solid #AAAAFF;
-	border-radius: 25px;
-}
-
-#footer {
-	position: fixed;
-	background-color: white;
-	width: 100%;
-	bottom: 2px;
-	height: 5%;
-	text-align: center;
 }
 
 #userdata {
@@ -84,6 +77,7 @@ input[type="text"], input[type="password"], select {
   border: 3px solid #73AD21;
   text-align: right;
   padding-right: 4 px;
+  border-radius: 10px;
 }
 
 body {
@@ -115,11 +109,12 @@ h1
 #logo
 {
 	width: 95%;
+	text-align: center;
 }
 
 #logo-img
 {
-	width: 95%;
+	width: 50%;
 }
 
 .table-header
